# ocaml-monadic

./: .gitignore  .merlin  DEVELOPING.md  LICENSE  Makefile  PACKAGING.md  README.md  _oasis  _tags  myocamlbuild.ml  ocaml-monadic.install  ocaml-monadic.opam  setup.ml
lib/: META  META.ab
opam/: findlib  opam
src/: jbuild  ocaml_monadic.ml  ocaml_monadic_ppx.ml
src_test/: .merlin  dune  test.ml
