opam-version: "1.2"
maintainer: "JHU PL Lab <pl.cs@jhu.edu>"
authors: [ "JHU PL Lab <pl.cs@jhu.edu>" ]
version: "0.4.0+dev"
license: "BSD-3-clause"
homepage: "http://github.com/zepalmer/ocaml-monadic"
dev-repo: "https://github.com/zepalmer/ocaml-monadic.git"
bug-reports: "https://github.com/zepalmer/ocaml-monadic/issues"
build:[ "dune" "build" "-p" name "-j" jobs ]
build-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "dune" {build & >= "1.0.0"}
  "ocaml-migrate-parsetree"
  "ppx_tools_versioned"
]
available: [ ocaml-version >= "4.04.0" ]
